[gd_scene load_steps=4 format=3 uid="uid://csplash001"]

[ext_resource type="Script" path="res://scripts/ui/splash_screen.gd" id="1_splash"]
[ext_resource type="FontFile" path="res://assets/ui/Font/Kenney Future.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.031, 0.031, 0.063, 1)

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_splash")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.031, 0.031, 0.063, 1)

[node name="ContentContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="AnvilContainer" type="CenterContainer" parent="ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnvilIcon" type="Label" parent="ContentContainer/AnvilContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.467, 0.133, 1)
theme_override_colors/font_shadow_color = Color(1, 0.333, 0.0, 0.5)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 120
text = "âš’"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0.902, 0.333, 0.0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 42
text = "IDLE BLACKSMITH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.533, 0.573, 0.635, 0.9)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Forge Your Legend"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="LoreContainer" type="PanelContainer" parent="ContentContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="LoreLabel" type="Label" parent="ContentContainer/LoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.533, 0.573, 0.635, 0.8)
theme_override_font_sizes/font_size = 13
text = "In the realm of Aethermoor, an ancient forge
awaits a master worthy of its flames..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="LoadingContainer" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ProgressBar" type="ProgressBar" parent="ContentContainer/LoadingContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 8)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
value = 0.0
show_percentage = false

[node name="LoadingLabel" type="Label" parent="ContentContainer/LoadingContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.533, 0.573, 0.635, 0.7)
theme_override_font_sizes/font_size = 11
text = "Heating the forge..."
horizontal_alignment = 1

[node name="TapPrompt" type="Label" parent="ContentContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.467, 0.133, 0.8)
theme_override_font_sizes/font_size = 14
text = "Tap to Begin"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.38, 0.42, 0.48, 0.5)
theme_override_font_sizes/font_size = 10
text = "v1.0.0"
horizontal_alignment = 1
